# BNO055-Pico

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bno055.cpp  bno055.hpp  format.sh
.github/: pull_request_template.md
.github/workflows/: cppcheck.yml
examples/: CMakeLists.txt  poll_data.cpp
